--- a/public_html/static/css/partials/reset.scss
+++ b/public_html/static/css/partials/reset.scss
@@ -6,10 +6,10 @@ body {
 	padding: 0;
 	direction: rtl;
 	background: #cedfd2 url(../img/pattern.png) repeat;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	 -khtml-user-select: none;
-	   -moz-user-select: none;
-	    -ms-user-select: none;
-			user-select: none;
+	// -webkit-touch-callout: none;
+	// -webkit-user-select: none;
+	//  -khtml-user-select: none;
+	//    -moz-user-select: none;
+	//     -ms-user-select: none;
+	// 		user-select: none;
 }
