--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -178,4 +178,12 @@
 		height: 16px;
 		margin: 0 auto;
 	}
+
+	.icoedit {
+		background: url(../img/edit.png);
+		display: block;
+		width: 16px;
+		height: 16px;
+		margin: 0 auto;
+	}
 }
