--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -186,4 +186,13 @@
 		height: 16px;
 		margin: 0 auto;
 	}
+
+	.icoclasses {
+		background: url(../svg/icons/class.svg);
+		background-size: 100% 100%;
+		display: block;
+		width: 16px;
+		height: 16px;
+		margin: 0 auto;
+	}
 }
