--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -173,27 +173,36 @@
 	}
 }
 
-.ico {
+.icomore {
 	display: block;
 	width: 16px;
 	height: 16px;
 	margin: 0 auto;
-}
-
-.icomore {
 	background: url(../img/more.png);
 }
 
 .icoedit {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
 	background: url(../img/edit.png);
 }
 
 .icoclasses {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
 	background: url(../svg/icons/class.svg);
 	background-size: 100% 100%;
 }
 
 .icoadd {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
 	background: url(../svg/icons/add.svg);
 	background-size: 100% 100%;
 }
