--- a/public_html/portal/static/css/admin.css
+++ b/public_html/portal/static/css/admin.css
@@ -590,23 +590,33 @@ label {
     -o-transition: all 100ms linear;
     transition: all 100ms linear; }
 
-.ico {
+.icomore {
   display: block;
   width: 16px;
   height: 16px;
-  margin: 0 auto; }
-
-.icomore {
+  margin: 0 auto;
   background: url(../img/more.png); }
 
 .icoedit {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
   background: url(../img/edit.png); }
 
 .icoclasses {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
   background: url(../svg/icons/class.svg);
   background-size: 100% 100%; }
 
 .icoadd {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
   background: url(../svg/icons/add.svg);
   background-size: 100% 100%; }
 
