--- a/public_html/portal/static/css/admin.css
+++ b/public_html/portal/static/css/admin.css
@@ -187,6 +187,116 @@ body {
   #settings > div.dropdown > div:first-child {
     background: #7080ba; }
 
+.icomore {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../img/more.png); }
+
+.icoedit {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../img/edit.png); }
+
+.icoclasses {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/class.svg);
+  background-size: 100% 100%; }
+
+.icoadd {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/add.svg);
+  background-size: 100% 100%; }
+
+.icohome {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/home.svg);
+  background-size: 100% 100%; }
+
+.icouser {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/user.svg);
+  background-size: 100% 100%; }
+
+.icoteacher {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/teacher.svg);
+  background-size: 100% 100%; }
+
+.icoclass {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/class.svg);
+  background-size: 100% 100%; }
+
+.icoattendance {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/attendance.svg);
+  background-size: 100% 100%; }
+
+.icoletters {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/letters.svg);
+  background-size: 100% 100%; }
+
+.icoshare {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/share.svg);
+  background-size: 100% 100%; }
+
+.icofolder {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/folder.svg);
+  background-size: 100% 100%; }
+
+.icomedia {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/media.svg);
+  background-size: 100% 100%; }
+
+.icosettings {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/settings.svg);
+  background-size: 100% 100%; }
+
 #tabs.ui-widget-content {
   background: transparent; }
 
@@ -589,36 +699,6 @@ label {
     -moz-transition: all 100ms linear;
     -o-transition: all 100ms linear;
     transition: all 100ms linear; }
-
-.icomore {
-  display: block;
-  width: 16px;
-  height: 16px;
-  margin: 0 auto;
-  background: url(../img/more.png); }
-
-.icoedit {
-  display: block;
-  width: 16px;
-  height: 16px;
-  margin: 0 auto;
-  background: url(../img/edit.png); }
-
-.icoclasses {
-  display: block;
-  width: 16px;
-  height: 16px;
-  margin: 0 auto;
-  background: url(../svg/icons/class.svg);
-  background-size: 100% 100%; }
-
-.icoadd {
-  display: block;
-  width: 16px;
-  height: 16px;
-  margin: 0 auto;
-  background: url(../svg/icons/add.svg);
-  background-size: 100% 100%; }
 
 .clearbox {
   clear: both; }
