--- a/public_html/portal/static/css/admin.css
+++ b/public_html/portal/static/css/admin.css
@@ -749,4 +749,26 @@ ul.copire-contextmenu {
   #status-xhr.status-xhr-error {
     border-color: #B470BA; }
 
+.custom-combobox-input {
+  background: #e2e2e2;
+  outline: 1px solid #b7b7b7;
+  outline-offset: 1px;
+  border: none;
+  border-radius: 2px;
+  padding: 2px 10px;
+  height: 24px;
+  width: 240px;
+  line-height: 24px;
+  font-family: "WYekan" !important;
+  font-size: 12px !important;
+  color: #333 !important; }
+
+.ui-autocomplete {
+  overflow-y: auto;
+  overflow-x: hidden; }
+
+.ui-tooltip {
+  font-family: "WYekan" !important;
+  font-size: 12px !important; }
+
 /*# sourceMappingURL=admin.css.map */
