--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -227,3 +227,25 @@ ul.copire-contextmenu{
 		border-color :#B470BA;
 	}
 }
+.custom-combobox-input{
+	background: #e2e2e2;
+	outline: 1px solid #b7b7b7;
+	outline-offset: 1px;
+	border: none;
+	border-radius: 2px;
+	padding: 2px 10px;
+	height: 24px;
+	width: 240px;
+	line-height: 24px;
+	font-family: "WYekan"!important;
+	font-size: 12px!important;
+	color: #333 !important;
+}
+.ui-autocomplete{
+	overflow-y:auto;
+	overflow-x:hidden
+}
+.ui-tooltip{
+	font-family: "WYekan"!important;
+	font-size: 12px!important;
+}
