--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -249,3 +249,10 @@ ul.copire-contextmenu{
 	font-family: "WYekan"!important;
 	font-size: 12px!important;
 }
+.custom-combobox>.ui-icon-triangle-1-s{
+	display: inline-block;
+	position: relative;
+	left: 20px;
+	top: 5px;
+	cursor: pointer;
+}
