--- a/public_html/portal/static/css/admin.css
+++ b/public_html/portal/static/css/admin.css
@@ -778,4 +778,13 @@ ul.copire-contextmenu {
   top: 5px;
   cursor: pointer; }
 
+.slider-number {
+  width: 20px !important; }
+
+.ui-sslider {
+  width: 190px;
+  float: left;
+  margin-left: 24px;
+  margin-top: 6px; }
+
 /*# sourceMappingURL=admin.css.map */
