--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -256,3 +256,14 @@ ul.copire-contextmenu{
 	top: 5px;
 	cursor: pointer;
 }
+
+.slider-number {
+	width: 20px !important;
+}
+
+.ui-sslider {
+	width: 190px;
+	float: left;
+	margin-left: 24px;
+	margin-top: 6px; 
+}
