--- a/public_html/portal/static/css/admin.css
+++ b/public_html/portal/static/css/admin.css
@@ -779,12 +779,12 @@ ul.copire-contextmenu {
   cursor: pointer; }
 
 .slider-number {
-  width: 20px !important; }
+  width: 25px !important; }
 
 .ui-sslider {
   width: 190px;
   float: left;
-  margin-left: 24px;
+  margin-right: 24px;
   margin-top: 6px; }
 
 /*# sourceMappingURL=admin.css.map */
