--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -258,12 +258,12 @@ ul.copire-contextmenu{
 }
 
 .slider-number {
-	width: 20px !important;
+	width: 25px !important;
 }
 
 .ui-sslider {
 	width: 190px;
 	float: left;
-	margin-left: 24px;
+	margin-right: 24px;
 	margin-top: 6px; 
 }
