price add for users 70%

--- a/public_html/portal/static/css/partials/icons.scss
+++ b/public_html/portal/static/css/partials/icons.scss
@@ -99,6 +99,292 @@
 	}
 }
 
+#allteacher {
+	background-image: url(../svg/icons/allteacher.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#allusers {
+	background-image: url(../svg/icons/allusers.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#dadd {
+	background-image: url(../svg/icons/dadd.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#dattendance {
+	background-image: url(../svg/icons/dattendance.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#dclose {
+	background-image: url(../svg/icons/dclose.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#dletters {
+	background-image: url(../svg/icons/dletters.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#dmedia {
+	background-image: url(../svg/icons/dmedia.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#dsettings {
+	background-image: url(../svg/icons/dsettings.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#dshare {
+	background-image: url(../svg/icons/dshare.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#dteacher {
+	background-image: url(../svg/icons/dteacher.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#duser {
+	background-image: url(../svg/icons/duser.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#likes {
+	background-image: url(../svg/icons/likes.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#message {
+	background-image: url(../svg/icons/message.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#pictures {
+	background-image: url(../svg/icons/pictures.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+#sound {
+	background-image: url(../svg/icons/sound.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #7080ba;
+			}
+		}
+	}
+}
+
+//----------------------------------------------- ico{icon}
+.icoallteacher {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/allteacher.svg);
+}
+
+.icoallusers {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/allusers.svg);
+}
+
+.icodadd {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/dadd.svg);
+}
+
+.icodattendance {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/dattendance.svg);
+}
+
+.icodclose {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/dclose.svg);
+}
+
+.icodletters {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/dletters.svg);
+}
+
+.icodmedia {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/dmedia.svg);
+}
+
+.icodsettings {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/dsettings.svg);
+}
+
+.icodshare {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/dshare.svg);
+}
+
+.icodteacher {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/dteacher.svg);
+}
+
+.icoduser {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/duser.svg);
+}
+
+.icolikes {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/likes.svg);
+}
+
+.icomessage {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/message.svg);
+}
+
+.icopictures {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/pictures.svg);
+}
+
+.icosound {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/sound.svg);
+}
+
 .icomore {
 	display: block;
 	width: 16px;
@@ -113,15 +399,6 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../img/edit.png);
-}
-
-.icoclasses {
-	display: block;
-	width: 16px;
-	height: 16px;
-	margin: 0 auto;
-	background: url(../svg/icons/class.svg);
-	background-size: 100% 100%;
 }
 
 .icoadd {
