--- a/public_html/portal/static/css/admin.css
+++ b/public_html/portal/static/css/admin.css
@@ -187,6 +187,186 @@ body {
   #settings > div.dropdown > div:first-child {
     background: #7080ba; }
 
+#allteacher {
+  background-image: url(../svg/icons/allteacher.svg); }
+  #allteacher > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#allusers {
+  background-image: url(../svg/icons/allusers.svg); }
+  #allusers > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#dadd {
+  background-image: url(../svg/icons/dadd.svg); }
+  #dadd > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#dattendance {
+  background-image: url(../svg/icons/dattendance.svg); }
+  #dattendance > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#dclose {
+  background-image: url(../svg/icons/dclose.svg); }
+  #dclose > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#dletters {
+  background-image: url(../svg/icons/dletters.svg); }
+  #dletters > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#dmedia {
+  background-image: url(../svg/icons/dmedia.svg); }
+  #dmedia > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#dsettings {
+  background-image: url(../svg/icons/dsettings.svg); }
+  #dsettings > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#dshare {
+  background-image: url(../svg/icons/dshare.svg); }
+  #dshare > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#dteacher {
+  background-image: url(../svg/icons/dteacher.svg); }
+  #dteacher > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#duser {
+  background-image: url(../svg/icons/duser.svg); }
+  #duser > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#likes {
+  background-image: url(../svg/icons/likes.svg); }
+  #likes > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#message {
+  background-image: url(../svg/icons/message.svg); }
+  #message > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#pictures {
+  background-image: url(../svg/icons/pictures.svg); }
+  #pictures > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+#sound {
+  background-image: url(../svg/icons/sound.svg); }
+  #sound > div.dropdown > div:first-child {
+    background: #7080ba; }
+
+.icoallteacher {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/allteacher.svg); }
+
+.icoallusers {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/allusers.svg); }
+
+.icodadd {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/dadd.svg); }
+
+.icodattendance {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/dattendance.svg); }
+
+.icodclose {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/dclose.svg); }
+
+.icodletters {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/dletters.svg); }
+
+.icodmedia {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/dmedia.svg); }
+
+.icodsettings {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/dsettings.svg); }
+
+.icodshare {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/dshare.svg); }
+
+.icodteacher {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/dteacher.svg); }
+
+.icoduser {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/duser.svg); }
+
+.icolikes {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/likes.svg); }
+
+.icomessage {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/message.svg); }
+
+.icopictures {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/pictures.svg); }
+
+.icosound {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/sound.svg); }
+
 .icomore {
   display: block;
   width: 16px;
@@ -200,14 +380,6 @@ body {
   height: 16px;
   margin: 0 auto;
   background: url(../img/edit.png); }
-
-.icoclasses {
-  display: block;
-  width: 16px;
-  height: 16px;
-  margin: 0 auto;
-  background: url(../svg/icons/class.svg);
-  background-size: 100% 100%; }
 
 .icoadd {
   display: block;
