--- a/public_html/portal/static/css/admin.css
+++ b/public_html/portal/static/css/admin.css
@@ -190,77 +190,77 @@ body {
 #allteacher {
   background-image: url(../svg/icons/allteacher.svg); }
   #allteacher > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #allusers {
   background-image: url(../svg/icons/allusers.svg); }
   #allusers > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #dadd {
   background-image: url(../svg/icons/dadd.svg); }
   #dadd > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #dattendance {
   background-image: url(../svg/icons/dattendance.svg); }
   #dattendance > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #dclose {
   background-image: url(../svg/icons/dclose.svg); }
   #dclose > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #dletters {
   background-image: url(../svg/icons/dletters.svg); }
   #dletters > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #dmedia {
   background-image: url(../svg/icons/dmedia.svg); }
   #dmedia > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #dsettings {
   background-image: url(../svg/icons/dsettings.svg); }
   #dsettings > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #dshare {
   background-image: url(../svg/icons/dshare.svg); }
   #dshare > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #dteacher {
   background-image: url(../svg/icons/dteacher.svg); }
   #dteacher > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #duser {
   background-image: url(../svg/icons/duser.svg); }
   #duser > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #likes {
   background-image: url(../svg/icons/likes.svg); }
   #likes > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #message {
   background-image: url(../svg/icons/message.svg); }
   #message > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #pictures {
   background-image: url(../svg/icons/pictures.svg); }
   #pictures > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 #sound {
   background-image: url(../svg/icons/sound.svg); }
   #sound > div.dropdown > div:first-child {
-    background: #7080ba; }
+    background: #4dbddc; }
 
 .icoallteacher {
   display: block;
