--- a/public_html/portal/static/css/partials/icons.scss
+++ b/public_html/portal/static/css/partials/icons.scss
@@ -104,7 +104,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -115,7 +115,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -126,7 +126,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -137,7 +137,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -148,7 +148,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -159,7 +159,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -170,7 +170,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -181,7 +181,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -192,7 +192,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -203,7 +203,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -214,7 +214,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -225,7 +225,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -236,7 +236,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -247,7 +247,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
@@ -258,7 +258,7 @@
 	> div.dropdown {
 		> div {
 			&:first-child {
-				background: #7080ba;
+				background: #4dbddc;
 			}
 		}
 	}
