--- a/public_html/portal/static/css/partials/icons.scss
+++ b/public_html/portal/static/css/partials/icons.scss
@@ -272,6 +272,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/allteacher.svg);
+	background-size: 100% 100%;
 }
 
 .icoallusers {
@@ -280,6 +281,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/allusers.svg);
+	background-size: 100% 100%;
 }
 
 .icodadd {
@@ -288,6 +290,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/dadd.svg);
+	background-size: 100% 100%;
 }
 
 .icodattendance {
@@ -296,6 +299,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/dattendance.svg);
+	background-size: 100% 100%;
 }
 
 .icodclose {
@@ -304,6 +308,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/dclose.svg);
+	background-size: 100% 100%;
 }
 
 .icodletters {
@@ -312,6 +317,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/dletters.svg);
+	background-size: 100% 100%;
 }
 
 .icodmedia {
@@ -320,6 +326,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/dmedia.svg);
+	background-size: 100% 100%;
 }
 
 .icodsettings {
@@ -328,6 +335,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/dsettings.svg);
+	background-size: 100% 100%;
 }
 
 .icodshare {
@@ -336,6 +344,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/dshare.svg);
+	background-size: 100% 100%;
 }
 
 .icodteacher {
@@ -344,6 +353,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/dteacher.svg);
+	background-size: 100% 100%;
 }
 
 .icoduser {
@@ -352,6 +362,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/duser.svg);
+	background-size: 100% 100%;
 }
 
 .icolikes {
@@ -360,6 +371,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/likes.svg);
+	background-size: 100% 100%;
 }
 
 .icomessage {
@@ -368,6 +380,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/message.svg);
+	background-size: 100% 100%;
 }
 
 .icopictures {
@@ -376,6 +389,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/pictures.svg);
+	background-size: 100% 100%;
 }
 
 .icosound {
@@ -384,6 +398,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../svg/icons/sound.svg);
+	background-size: 100% 100%;
 }
 
 .icomore {
@@ -392,6 +407,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../img/more.png);
+	background-size: 100% 100%;
 }
 
 .icoedit {
@@ -400,6 +416,7 @@
 	height: 16px;
 	margin: 0 auto;
 	background: url(../img/edit.png);
+	background-size: 100% 100%;
 }
 
 .icoadd {
