--- a/public_html/portal/static/css/partials/icons.scss
+++ b/public_html/portal/static/css/partials/icons.scss
@@ -508,3 +508,12 @@
 	background: url(../svg/icons/settings.svg);
 	background-size: 100% 100%;
 }
+
+.icoredclose {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/redclose.svg);
+	background-size: 100% 100%;
+}
