--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -267,3 +267,26 @@ ul.copire-contextmenu{
 	margin-right: 24px;
 	margin-top: 6px; 
 }
+
+
+.status-warn {
+	background: #FFECB3;
+	border: 1px solid #FFD54F;
+	padding: 5px 10px;
+	font-size: 12px;
+	display: inline-block;
+}
+.status-fatal {
+	background: #FFCDD2;
+	border: 1px solid #E57373;
+	padding: 5px 10px;
+	font-size: 12px;
+	display: inline-block;
+}
+.status-true {
+	background: #DCEDC8;
+	border: 1px solid #66BB6A;
+	padding: 5px 10px;
+	font-size: 12px;
+	display: inline-block;
+}
