--- a/public_html/portal/static/css/partials/icons.scss
+++ b/public_html/portal/static/css/partials/icons.scss
@@ -319,8 +319,27 @@
 		}
 	}
 }
+#certificationdisable {
+	background-image: url(../svg/icons/certificationdisable.svg);
+	> div.dropdown {
+		> div {
+			&:first-child {
+				background: #4dbddc;
+			}
+		}
+	}
+}
 
 //----------------------------------------------- ico{icon}
+.icocertificationdisable {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/certificationdisable.svg);
+	background-size: 100% 100%;
+}
+
 .icoallteacher {
 	display: block;
 	width: 16px;
