--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -293,3 +293,14 @@ ul.copire-contextmenu{
 a {
 	text-decoration: none !important;
 }
+
+
+.title {
+  width: 285px;
+  height: 75px;
+  background: url(../svg/title.svg) no-repeat center center;
+  position: absolute;
+  top: 7px;
+  right: 172px;
+  z-index: 99999;
+}
