--- a/public_html/portal/static/css/partials/icons.scss
+++ b/public_html/portal/static/css/partials/icons.scss
@@ -636,3 +636,12 @@
 	background: url(../svg/icons/score.svg);
 	background-size: 100% 100%;
 }
+
+.icoinformation {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/information.svg);
+	background-size: 100% 100%;
+}
