--- a/public_html/portal/static/css/admin.scss
+++ b/public_html/portal/static/css/admin.scss
@@ -384,3 +384,7 @@ a {
 	background: url(../svg/icons/information.svg);
 	background-size: 100% 100%;
 }
+.fieldrequired {
+	color:red;
+	/*margin: 0px;*/
+}
