course classes add bugfix

--- a/public_html/portal/static/css/admin.css
+++ b/public_html/portal/static/css/admin.css
@@ -299,6 +299,11 @@ body {
   #redclass > div.dropdown > div:first-child {
     background: #4dbddc; }
 
+#dadddisable {
+  background-image: url(../svg/icons/dadddisable.svg); }
+  #dadddisable > div.dropdown > div:first-child {
+    background: #4dbddc; }
+
 .icocertificationdisable {
   display: block;
   width: 16px;
@@ -593,6 +598,14 @@ body {
   height: 16px;
   margin: 0 auto;
   background: url(../svg/icons/redclass.svg);
+  background-size: 100% 100%; }
+
+.icodadddisable {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/dadddisable.svg);
   background-size: 100% 100%; }
 
 #tabs.ui-widget-content {
