some report added :)

--- a/public_html/portal/static/css/partials/icons.scss
+++ b/public_html/portal/static/css/partials/icons.scss
@@ -683,3 +683,11 @@
 	background: url(../svg/icons/dadddisable.svg);
 	background-size: 100% 100%;
 }
+.icoxlsx {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/xlsx.png);
+	background-size: 100% 100%;
+}
