--- a/public_html/portal/static/css/admin.css
+++ b/public_html/portal/static/css/admin.css
@@ -608,6 +608,14 @@ body {
   background: url(../svg/icons/dadddisable.svg);
   background-size: 100% 100%; }
 
+.icoxlsx {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 auto;
+  background: url(../svg/icons/xlsx.png);
+  background-size: 100% 100%; }
+
 #tabs.ui-widget-content {
   background: transparent; }
 
